<resources>
    <string name="app_name">chuibbo-android</string>
    <string name="home_text">HOME</string>
    <string name="calendar_text">CALENDAR</string>
    <string name="camera_text">CAMERA</string>
    <string name="mypage_text">MYPAGE</string>
    <string name="calendar_text">CALENDAR</string>
    <string name="login_text">Login</string>
    <string name="email_text_korean">이메일</string>
    <string name="password_text_korean">비밀번호</string>
    <string name="login_text_korean">로그인</string>
    <string name="nickname_text_korean">닉네임</string>
    <string name="password_check_text_korean">비밀번호 재확인</string>
    <string name="create_account_text_korean">계정생성하기</string>
    <string name="login_failure_text_korean">로그인에 실패하였습니다.</string>
    <string name="OK">확인</string>
    <string name="email_error_text_korean">올바른 이메일 형식으로 입력해주세요.</string>
    <string name="password_error_text_korean">비밀번호가 일치하지 않습니다.</string>
    <string name="complete_user_info_modeification">정보 수정 완료</string>
    <string name="withdrawal">회원탈퇴 약관</string>
    <string name="inquiry">문의하기</string>
    <string name="submission_text_korean">제출하기</string>
    <string name="continue_text_korean">계속</string>
    <string name="forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="faq_text_korean">자주 묻는 질문</string>
    <string name="face_detection_failed">얼굴 인식에 실패하였습니다.</string>
    <string name="unexpected_error_occured">사진 합성 중 예기치 못한 오류가 발생하였습니다.</string>
    <string name="guideline_not_protected">이미지에 가이드라인 위배사항이 포함되었습니다.</string>
    <string name="several_people_detected">사람이 둘 이상 감지되었습니다.</string>
    <string name="take_picture_again">사진 다시 선택/촬영하기</string>
    <string name="certification_text_korean">인증</string>
    <string name="password_modification">비밀번호 변경</string>

    <string-array name="faq_questions">
        <item>왜 이건 이래요?</item>
        <item>왜 이건 이래요?</item>
        <item>왜 이건 이래요?</item>
    </string-array>

    <string-array name="faq_answers">
        <item>이건 이래서 그래요</item>
        <item>이건 이래서 그래요</item>
        <item>이건 이래서 그래요\n이건 이래서 그래요\n이건 이래서 그래요</item>
    </string-array>

    <string-array name="notice_title">
        <item>모두에게 알립니다요</item>
        <item>모두에게 알립니다요</item>
        <item>모두에게 알립니다요</item>
    </string-array>

    <string-array name="notice_content">
        <item>모두모두 많이 참여해주세요~</item>
        <item>모두모두 많이 참여해주세요~</item>
        <item>모두모두 많이 참여해주세요~</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">검색어를 입력하세요</string>
</resources>