<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_item"
        android:icon="@drawable/ic_home"
        android:checked="true"
        android:enabled="true"
        android:title="@string/home_text" />
    <item
        android:id="@+id/calendar_item"
        android:icon="@drawable/calendar"
        android:enabled="true"
        android:title="@string/calendar_text" />
    <item
        android:id="@+id/camera_item"
        android:icon="@drawable/ic_camera"
        android:enabled="true"
        android:title="@string/camera_text" />
    <item
        android:id="@+id/mypage_item"
        android:icon="@drawable/ic_mypage"
        android:enabled="true"
        android:title="@string/mypage_text" />
</menu>