<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="67dp">

    <EditText
        android:id="@+id/email_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:hint="@string/email_text_korean"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_text_korean"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/certification_button"
        style="@style/Widget.AppCompat.Button.myButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:enabled="false"
        android:clickable="false"
        android:background="@drawable/button_shape_disabled"
        android:textColor="@color/dark_gray"
        android:text="@string/certification_text_korean"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/user_info_modification_button"
        style="@style/Widget.AppCompat.Button.myButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:enabled="false"
        android:clickable="false"
        android:background="@drawable/button_shape_disabled"
        android:textColor="@color/dark_gray"
        android:text="@string/complete_user_info_modeification"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/password_text"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>