<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:layout_marginTop="67dp"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_text_korean"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginTop="74dp"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_text"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/one"
            android:layout_width="22dp"
            android:layout_height="44dp"
            android:background="@drawable/button_shape"
            android:text="@string/continue_text_korean"
            android:layout_marginLeft="67dp"
            android:layout_marginRight="67dp"
            android:layout_marginTop="35dp"
            tools:ignore="MissingConstraints" />
    </EditText>

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_text_korean"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/button_shape"
        android:text="@string/continue_text_korean"
        android:layout_marginLeft="67dp"
        android:layout_marginRight="67dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/password_text"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>