<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="67dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:hint="@string/email_text_korean"
        android:layout_marginTop="74dp"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_text"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="MissingConstraints" />

    <!-- TODO: 인증 버튼 크기 다시 조정 -->
    <Button
        android:id="@+id/certification_button"
        style="@style/Widget.AppCompat.Button.myButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:enabled="false"
        android:clickable="false"
        android:background="@drawable/button_shape_disabled"
        android:textColor="@color/dark_gray"
        android:inputType="text"
        android:text="@string/certification_text_korean"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_text"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/certification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="인증코드"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/continue_button"
        style="@style/Widget.AppCompat.Button.myButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:enabled="false"
        android:clickable="false"
        android:background="@drawable/button_shape_disabled"
        android:textColor="@color/dark_gray"
        android:text="@string/continue_text_korean"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/certification_code"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>