<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="67dp"
    tools:context=".signup.SignupFragment">

    <TextView
        android:id="@+id/nickname_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nickname_text_korean"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@+id/nickname_text"
        app:layout_constraintStart_toStartOf="@id/nickname_text">

        <EditText
            android:id="@+id/nickname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:inputType="text"
            android:paddingLeft="15dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/nickname_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:layout_alignParentRight="true"
            android:enabled="false"
            android:text="중복확인" />
    </RelativeLayout>

    <TextView
        android:id="@+id/nickname_text_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="10자 이내의 영문, 숫자, 한글로 만들어주세요."
        android:textSize="10sp"
        android:textColor="@color/yellow"
        app:layout_constraintTop_toBottomOf="@+id/nickname"
        app:layout_constraintStart_toStartOf="@id/nickname_text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_text_korean"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/nickname"
        app:layout_constraintStart_toStartOf="@id/nickname"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        app:layout_constraintStart_toStartOf="@id/email_text">

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/email_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/gray"
            android:enabled="false"
            android:text="중복확인" />
    </RelativeLayout>

    <TextView
        android:id="@+id/email_text_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_error_text_korean"
        android:textSize="10sp"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="@id/nickname_text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_text_korean"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="@id/nickname_text"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        app:layout_constraintTop_toBottomOf="@+id/password_text"
        app:layout_constraintStart_toStartOf="@id/nickname_text"
        tools:ignore="MissingConstraints, TextFields" />

    <TextView
        android:id="@+id/password_text_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="대소문자, 숫자를 포함한 8자리 이상으로 만들어주세요."
        android:textSize="10sp"
        android:textColor="@color/red"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        app:layout_constraintStart_toStartOf="@id/nickname_text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/password_check_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_check_text_korean"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        app:layout_constraintStart_toStartOf="@id/nickname_text"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password_check_edit_text"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        app:layout_constraintTop_toBottomOf="@+id/password_check_text"
        app:layout_constraintStart_toStartOf="@id/nickname_text"
        tools:ignore="MissingConstraints, TextFields" />

    <TextView
        android:id="@+id/password_check_text_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_error_text_korean"
        android:textSize="10sp"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/password_check_edit_text"
        app:layout_constraintStart_toStartOf="@id/nickname_text"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/agree_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="모든 약관을 읽고 동의합니다."
        android:textSize="10sp"
        android:textColor="@color/black"
        android:buttonTint="@color/main_blue"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/password_check_edit_text"
        app:layout_constraintStart_toStartOf="@id/nickname_text"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/create_account_button"
        style="@style/Widget.AppCompat.Button.myButton"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:enabled="false"
        android:clickable="false"
        android:background="@drawable/button_shape_disabled"
        android:textColor="@color/dark_gray"
        android:text="@string/create_account_text_korean"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/agree_checkbox"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/kakaotalk_sosial_login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/social_login_kakaotalk"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/create_account_button"
        app:layout_constraintEnd_toStartOf="@id/naver_social_login_image"
        tools:ignore="ContentDescription, MissingConstraints" />

    <ImageView
        android:id="@+id/naver_social_login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/social_login_naver"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/create_account_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription, MissingConstraints" />

    <ImageView
        android:id="@+id/google_social_login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/social_login_google"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/create_account_button"
        app:layout_constraintStart_toEndOf="@id/naver_social_login_image"
        tools:ignore="ContentDescription, MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>