<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="67dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:src="@drawable/female_short_hair"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_text_korean"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/login_image"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        app:layout_constraintStart_toStartOf="@id/email_text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_text_korean"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
        app:layout_constraintStart_toStartOf="@id/email_text"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        app:layout_constraintTop_toBottomOf="@+id/password_text"
        app:layout_constraintStart_toStartOf="@id/email_text"
        tools:ignore="MissingConstraints, TextFields" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/button_shape"
        android:text="@string/login_text_korean"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/question_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="18dp"
        android:text="비밀번호를 잊으셨나요?"
        android:textSize="9sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/question_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="계정이 없으신가요?"
        android:textSize="9sp"
        android:textColor="@color/black"
        android:layout_marginLeft="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/make_account_text"
        app:layout_constraintTop_toBottomOf="@+id/question_password_text"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/make_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="계정만들기"
        android:textSize="9sp"
        android:layout_marginRight="40dp"
        android:textColor="@color/main_blue"
        app:layout_constraintLeft_toRightOf="@id/question_account_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_password_text"
        tools:ignore="MissingConstraints" />



    <ImageView
        android:id="@+id/kakaotalk_sosial_login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/social_login_kakaotalk"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/question_account_text"
        app:layout_constraintEnd_toStartOf="@id/naver_social_login_image"
        tools:ignore="ContentDescription, MissingConstraints" />

    <ImageView
        android:id="@+id/naver_social_login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/social_login_naver"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/question_account_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription, MissingConstraints" />

    <ImageView
        android:id="@+id/google_social_login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/social_login_google"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/question_account_text"
        app:layout_constraintStart_toEndOf="@id/naver_social_login_image"
        tools:ignore="ContentDescription, MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>